added email template

--- a/core/templates/email/email.html
+++ b/core/templates/email/email.html
@@ -3,7 +3,7 @@
     Dear <strong>{{context.supplier}} </strong>,<br><br>
     
     Please find the Payment Remittance details from the clearing date of <strong> {{context.clearing_date}} </strong> <br>    
-    for <strong>USD {{context.amount}} </strong><br><br>
+    for <strong>{{context.currency}} {{context.amount}} </strong><br><br>
 
     With regards<br>
     <strong> Client Name </strong>
